[project]
name = "web-research-agent-demo"
version = "0.3.0"
description = "Web-based research agent using Amazon Web Services Strands Agents, Ollama running Qwen3, and Tavily MCP Server."
authors = [{ name = "Gary Stafford", email = "gary.a.stafford@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1",
    "strands-agents>=1.13.0",
    "strands-agents-tools>=0.2.12",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
